--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,25 @@ body{
 }
 
 
+img{
+  height: 50px;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
+.message-box{
+  background-color: #ffffff;
+  margin-top: 100px;
+  border-radius: 30px;
+  min-width:  650px;
+  min-height:  150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* font-family: 'Quicksand', sans-serif;
 COLORS
 light-yellow - #f7e4bf;
