--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,8 @@ body{
   width: 80%;
 }
 
-.receive-message{
+.receive-message,
+.remove-message{
   background-color: #134d71;
   color: #ffffff;
   border-radius: 4px;
